Wayland: Cursor hover effect flickers when scaling a Blender window #107594

Closed
opened 2023-05-04 01:09:18 +02:00 by Max Mustermann · 2 comments
First-time contributor

System Information
Operating system: Fedora Linux (Wayland, Gnome Shell 44.1)
Graphics card: AMD

Blender Version
Broken: 3.5.1

Short description of error
When scaling a Blender window the buttons get highlighted under the position the cursor was at when starting to scale the window.

I'm not sure if the flickering shown in the video is related or belongs in it's own bug report.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

Grab the Preferences window next to a button to scale it bigger.
The button and sometimes one other button will flicker once a button reaches the position the cursor started to scale at.

The "original cursor position" is only updated when hovering the cursor over the window again, not when sliding along the edge of it.

**System Information** Operating system: Fedora Linux (Wayland, Gnome Shell 44.1) Graphics card: AMD **Blender Version** Broken: 3.5.1 **Short description of error** When scaling a Blender window the buttons get highlighted under the position the cursor was at when starting to scale the window. I'm not sure if the flickering shown in the video is related or belongs in it's own bug report. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Grab the Preferences window next to a button to scale it bigger. The button and sometimes one other button will flicker once a button reaches the position the cursor started to scale at. The "original cursor position" is only updated when hovering the cursor over the window again, not when sliding along the edge of it.
Max Mustermann added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-04 01:09:19 +02:00
Iliya Katueshenock added the
Interest
Wayland
Interest
User Interface
labels 2023-05-04 06:39:12 +02:00
Member
cc @ideasman42
Campbell Barton added
Priority
Low
and removed
Priority
Normal
labels 2023-05-05 13:59:28 +02:00

Confirmed, setting low priority as it's only a visual glitch while windows are resizing.

Confirmed, setting low priority as it's only a visual glitch while windows are resizing.
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-05 14:52:02 +02:00
YimingWu added the
Module
Core
label 2023-07-06 09:56:56 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-06 08:16:12 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107594
No description provided.